--- a/.github/workflows/backup-to-s3.yml
+++ b/.github/workflows/backup-to-s3.yml
@@ -4,6 +4,8 @@ on:
   schedule:
     # 毎日12時(JST = UTC+9)に実行
     - cron: "00 03 * * *"
+    # 手動実行のトリガーを追加
+    workflow_dispatch:
 
 jobs:
   backup:
