--- a/.github/workflows/bandit.yml
+++ b/.github/workflows/bandit.yml
@@ -22,7 +22,7 @@ jobs:
         run: pip install bandit
 
       - name: Run Bandit and Generate HTML Report
-        run: bandit -r . -f html -o bandit_report.html
+        run: bandit vulnerable.py -f html -o bandit_report.html
 
       - name: Upload HTML Report
         uses: actions/upload-artifact@v3
